[package]
name = "zinharo-rs"
version = "0.1.0"
authors = ["Owez <owez@scalist.net>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.11"
base64 = "0.12.1"

[dev-dependencies]
rand = "0.7.3"
